--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Template</title>
+        <title>Campo Minato</title>
 
         <!-- Bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -23,7 +23,42 @@
     </head>
 
     <body>
-        
+        <div class="container py-5">
+            <header class="text-center mb-5">
+                <div>
+                    <h1>
+                        Welcome to Campo Minato!
+                    </h1>
+                </div>
+            </header>
+
+            <div class="d-flex justify-content-center">
+
+                <div class="row">
+                    <div class="col">
+                        <select id="levels" class="form-select" aria-label="Default select example">
+                            <option value="100">Easy</option>
+                            <option value="81">Medium</option>
+                            <option value="49">Hard</option>
+                        </select>
+                    </div>
+
+                    <div class="col">
+                        <button type="button" class="btn btn-warning">
+                            <span class="purple-color">
+                                <strong>Play!</strong>
+                            </span>
+                        </button>
+                    </div>
+                </div>                              
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="grid-container d-flex flex-wrap">
+
+            </div>
+        </div>
 
 
 
